--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "azure-storage": "^0.4.1",
     "unirest": "^0.3.7"
   },
