--- a/package.json
+++ b/package.json
@@ -17,7 +17,30 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-mocha-test": "^0.12.4"
   },
-  "scripts": {
-    "test": "grunt test"
-  }
+  "scripts" : {
+    "test": "node node_modules/grunt-cli/bin/grunt"
+  },
+  "keywords": [
+    "indexer",
+    "azure",
+    "media",
+    "caption",
+    "video",
+    "captioning"
+  ],
+  "author": {
+    "name": "Steven Edouard",
+    "email": "steven.edouard1@gmail.com"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sedouard/azure-media-indexer/issues"
+  },
+  "homepage": "https://github.com/sedouard/azure-media-indexer",
+  "maintainers": [
+    {
+      "name": "sedouard",
+      "email": "steven.edouard1@gmail.com"
+    }
+  ]
 }
